# airtalk

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
hardware/: README.md
hardware/boards/: README.md  easyeda-bottom.json  easyeda-mainboard.json  easyeda-top.json
hardware/bom/: BOM_PCB_airtalk_v2a_2023-02-11.csv  README.md
hardware/cpl/: board-CPL.csv
hardware/schematic/: SCH_airtalk_v1_2023-02-11-easyeda.json
main/: CMakeLists.txt  apps.c  apps.h  buffer_pool.c  buffer_pool.h  crc.c  crc.h  crc32.c  crc32.h  ethernet.c  ethernet.h  html_page.h  hw.h  ip.c  ip.h  led.c  led.h  main.c  mdns_service.c  mdns_service.h  net_common.c  net_common.h  node_table.c  node_table.h  packet_types.h  packet_utils.c  packet_utils.h  pstrings.c  pstrings.h  recovery.c  recovery.h  recovery_listener.c  recovery_listener.h  scan_manager.c  scan_manager.h  storage.c  storage.h  tashtalk.c  tashtalk.h  uart.c  (+3 more)
